modified:   Modelo 1 - Logit/logit.ipynb

--- a/Modelo 1 - Logit/logit.ipynb
+++ b/Modelo 1 - Logit/logit.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "from sklearn import datasets\n",
     "from sklearn.inspection import DecisionBoundaryDisplay\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n"
    ]
   },
   {
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +336,6 @@
        "      <th>TUE</th>\n",
        "      <th>CALC</th>\n",
        "      <th>MTRANS</th>\n",
-       "      <th>NObeyesdad</th>\n",
        "      <th>Obesity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -356,7 +356,6 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Normal_Weight</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,7 +374,6 @@
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Normal_Weight</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -394,7 +392,6 @@
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>Normal_Weight</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -413,7 +410,6 @@
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>Overweight_Level_I</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -432,7 +428,6 @@
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Overweight_Level_II</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -447,21 +442,21 @@
        "3       0  27.0                               0     0   3.0  3.0     1      0   \n",
        "4       0  22.0                               0     0   2.0  1.0     1      0   \n",
        "\n",
-       "   CH2O  SCC  FAF  TUE  CALC  MTRANS           NObeyesdad  Obesity  \n",
-       "0   2.0    0  0.0  1.0     0       0        Normal_Weight        0  \n",
-       "1   3.0    1  3.0  0.0     1       0        Normal_Weight        0  \n",
-       "2   2.0    0  2.0  1.0     2       0        Normal_Weight        0  \n",
-       "3   2.0    0  2.0  0.0     2       2   Overweight_Level_I        0  \n",
-       "4   2.0    0  0.0  0.0     1       0  Overweight_Level_II        0  "
+       "   CH2O  SCC  FAF  TUE  CALC  MTRANS  Obesity  \n",
+       "0   2.0    0  0.0  1.0     0       0        0  \n",
+       "1   3.0    1  3.0  0.0     1       0        0  \n",
+       "2   2.0    0  2.0  1.0     2       0        0  \n",
+       "3   2.0    0  2.0  0.0     2       2        0  \n",
+       "4   2.0    0  0.0  0.0     1       0        0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eliminar = ['Height', 'Weight']\n",
+    "eliminar = ['Height', 'Weight', 'NObeyesdad']\n",
     "obesidad2 = obesidad.drop(eliminar,axis=1,inplace=False)\n",
     "obesidad2.head()"
    ]
@@ -896,10 +891,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "obs_x=obesidad2.drop(['Obesity'],axis=1,inplace=False)\n",
+    "obs_y=obesidad2.Obesity\n",
+    "X_train, X_test, y_train, y_test = train_test_split(obs_x, obs_y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "544     0\n",
+       "1987    1\n",
+       "420     0\n",
+       "527     0\n",
+       "196     0\n",
+       "Name: Obesity, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>Obesity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1987</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>527</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>936</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>781</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>634 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0  Obesity\n",
+       "544   0        0\n",
+       "1987  1        1\n",
+       "420   0        0\n",
+       "527   0        0\n",
+       "196   0        0\n",
+       "...  ..      ...\n",
+       "936   1        0\n",
+       "518   0        0\n",
+       "781   0        0\n",
+       "334   0        0\n",
+       "1523  1        1\n",
+       "\n",
+       "[634 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_logit.fit(X_train,y_train)\n",
+    "y_pred_test=modelo_logit.predict(X_test)\n",
+    "y_pred_test=pd.DataFrame(y_pred_test,index=X_test.index)\n",
+    "pd.concat([y_pred_test,y_test],axis=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[258,  88],\n",
+       "       [ 50, 238]], dtype=int64)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, modelo_logit.predict(X_test))"
+   ]
   }
  ],
  "metadata": {
